Fixed minor spacing issue with CSS

--- a/src/component/ConditionLabel/ConditionLabel.css
+++ b/src/component/ConditionLabel/ConditionLabel.css
@@ -1,6 +1,7 @@
 .ConditionLabelContainer {
     display: flex;
     justify-content: right;
+    margin: 5px;
 }
 
 .ConditionLabel {
